--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,24 +1,28 @@
-$color-cv: #FF990A;
-$color-career: #FF3864;
-$color-refer: #33B8FF;
-$color-skills: #E000D9;
-$color-portfolio: #00C49A;
-$color-contact: #DD5A40;
-
 $color-shadow: #1d1c22;
 
-$cv-light: #FFD2C2;
-$cv-dark: #EB2B00;
-$career-light: #C9E6F8;
-$career-dark: #007ECC;
-$refer-light: #FED5FF;
-$refer-dark:#E8008F;
-$portfolio-light: #FFC2F7;
-$portfolio-dark: #8B0078;
-$skills-light: #C7FAF4;
-$skills-dark: #0D9787;
-$contact-light: #FFFEBE;
-$contact-dark:#F06800;
+$cv-dark: #0F516B;
+$cv-middle: #259CA7;
+$cv-light: #DFF6F6;
+
+$career-dark: #006652;
+$career-middle: #00CCAD;
+$career-light: #DCF9F5;
+
+$refer-dark: #008F4C;
+$refer-middle: #7FC7A3;
+$refer-light: #F4F9F1;
+
+$skills-dark: #DB9E06;
+$skills-middle: #EDC55A;
+$skills-light: #FCF8EE;
+
+$portfolio-dark: #CC5500;
+$portfolio-middle: #E99B35;
+$portfolio-light: #FDF6ED;
+
+$contact-dark: #B63C16;
+$contact-middle: #DC8241;
+$contact-light: #F9E9DC;
 
 $short-trans: 200ms;
 $middle-trans: 300ms;
