--- a/sass/layout/_skills.scss
+++ b/sass/layout/_skills.scss
@@ -1,7 +1,7 @@
 #skills {
     i {
         padding: 0 5px;
-        color: var(--skills-text);
+        color: $skills-dark;
     }
     p {
         display: inline-flex;
