--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,11 @@
 @import "./utils/variables";
 @import "./utils/mixins";
+@import "./utils/keyframes";
 
 @import "./base/base";
 @import "./base/typography";
 
+@import "./components/bouncingBalls";
 @import "./components/buttons";
 @import "./components/switch-mode";
 
